# book-voice-webapp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: README.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py  models.py
backend/app/services/: __init__.py  image_pipeline.py  media_store.py  ocr_service.py  script_utils.py  tts_service.py
backend/scripts/: run_fixture_pipeline.py
backend/tests/: test_api.py  test_media_store.py  test_ocr_service.py  test_script_utils.py  test_tts_service.py
deploy/nginx/: book-voice-webapp.conf
deploy/systemd/: book-voice-webapp.service
web/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.spec.ts  App.vue  style.css
web/src/lib/: api.ts  capture.spec.ts  capture.ts  playback.ts
